# android-nfc-http-tunnel

./: README.md
android/NFCHTTPTunnel/app/: build.gradle  proguard-rules.pro
android/NFCHTTPTunnel/app/src/main/: AndroidManifest.xml
android/NFCHTTPTunnel/app/src/main/java/com/classycode/nfchttptun/: Constants.java  SetUrlDialogFragment.java  TunnelApduService.java  TunnelSettings.java
android/NFCHTTPTunnel/app/src/main/res/layout/: activity_http_tunnel.xml  dialog_set_url.xml
android/NFCHTTPTunnel/app/src/main/res/menu/: main_menu.xml
android/NFCHTTPTunnel/app/src/main/res/values/: colors.xml  strings.xml
android/NFCHTTPTunnel/app/src/main/res/xml/: http_tunnel_aid.xml
android/NFCHTTPTunnel/gradle/wrapper/: gradle-wrapper.properties
pn532_http_tunnel/: .gitignore  CMakeLists.txt  pn532_http_tunnel.c
